# demodb

./: .gitignore  Cargo.toml  run_test.sh
demo-client/: Cargo.toml
demo-client/src/: lib.rs
demo-core/: Cargo.toml  config-perf.json  inventory
demo-core/src/: batch.rs  config.rs  db.rs  errors.rs  iterator.rs  lib.rs  misc.rs  table_cache.rs  version.rs
demo-core/src/db/: mod.rs  txn.rs
demo-core/src/memtable/: mod.rs
demo-core/src/record/: mod.rs
demo-core/src/sstable/: mod.rs
demo-core/src/storage/: file.rs  mod.rs
demo-core/src/txn/: manager.rs  mod.rs
demo-core/tests/: db_test.rs
demo-core/tests/common/: mod.rs
demo-daemon/: Cargo.toml
demo-daemon/src/: lib.rs  main.rs
demo-tests/: Cargo.toml  config.json
demo-tests/tests/: cases.rs
demo-tests/tests/common/: mod.rs
src/: batch.rs  db.rs  errors.rs
src/memtable/: mod.rs
src/sstable/: block.rs  table.rs
src/storage/: file.rs
tests/: db_test.rs
tests/common/: mod.rs
