[package]
name = "demo-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.40"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
rand = "0.8"
env_logger = "0.10"
backtrace = "0.3"

[profile.test]
opt-level = 3
